--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+    <title>GitHub Repository Collaboration Network</title>
     <style>
       body {
         background-color: black;
