--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div id="graph"></div>
     <a href="https://github.com/coyotebush/github-network-analysis"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_white_ffffff.png" alt="Fork me on GitHub"></a>
     <script src="jquery-1.9.1.min.js"></script>
-    <script src="sigma.min.js"></script>
-    <script src="sigma.parseGexf.js"></script>
+    <script src="sigma.concat.js"></script>
+    <script src="sigma.parseJson.js"></script>
     <script src="code.js"></script>
   </body>
 </html>
