--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>GitHub Repository Collaboration Network</title>
     <style>
       body {
-        background-color: black;
+        background-color: #111;
         margin: 0;
         padding: 0;
       }
