--- a/index.html
+++ b/index.html
@@ -2,25 +2,17 @@
 <html>
   <head>
     <title>GitHub Repository Collaboration Network</title>
-    <style>
-      body {
-        background-color: #111;
-        margin: 0;
-        padding: 0;
-      }
-
-      #graph {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <div id="graph"></div>
-    <a href="https://github.com/coyotebush/github-network-analysis"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_white_ffffff.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/coyotebush/github-network-analysis">
+        <img id="gh-ribbon" src="https://s3.amazonaws.com/github/ribbons/forkme_left_white_ffffff.png" alt="Fork me on GitHub">
+    </a>
+    <p id="info">Top-starred GitHub repositories, colored by programming language,
+    linked by collaborative activity during 2012. For more details, see the
+    <a href="https://github.com/coyotebush/github-network-analysis/raw/master/github.pdf">report</a>&nbsp;[PDF].</p>
+    <input type="search" placeholder="Repository name">
     <script src="jquery-1.9.1.min.js"></script>
     <script src="sigma.concat.js"></script>
     <script src="sigma.parseJson.js"></script>
