move GitHub link to the footer.
Closes #6.

--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
   </head>
   <body>
     <div id="graph"></div>
-    <a href="https://github.com/coyotebush/github-network-analysis">
-        <img id="gh-ribbon" src="https://s3.amazonaws.com/github/ribbons/forkme_left_white_ffffff.png" alt="Fork me on GitHub">
-    </a>
     <p id="info">Top-starred GitHub repositories, colored by programming language,
-    linked by collaborative activity during 2012. For more details, see the
-    <a href="https://github.com/coyotebush/github-network-analysis/raw/master/github.pdf">report</a>&nbsp;[PDF].</p>
+    linked by collaborative activity during 2012. More details in the
+    <a href="https://github.com/coyotebush/github-network-analysis/raw/master/github.pdf">report</a>&nbsp;[PDF].
+    Code and data <a href="https://github.com/coyotebush/github-network-analysis">on GitHub</a>.</p>
     <input type="search" placeholder="Repository name">
     <script src="jquery-1.9.1.min.js"></script>
     <script src="sigma.concat.js"></script>
