better webkit search input support

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     linked by collaborative activity during 2012. More details in the
     <a href="https://github.com/coyotebush/github-network-analysis/raw/master/github.pdf">report</a>&nbsp;[PDF].
     Code and data <a href="https://github.com/coyotebush/github-network-analysis">on GitHub</a>.</p>
-    <input type="search" id="filter" placeholder="repository name">
+    <input type="search" id="filter" placeholder="repository name" incremental>
     <script src="jquery-1.9.1.min.js"></script>
     <script src="sigma.concat.js"></script>
     <script src="sigma.parseJson.js"></script>
