better footer instructions

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   </head>
   <body>
     <div id="graph"></div>
-    <p id="info">Top-starred GitHub repositories, colored by programming language,
-    linked by collaborative activity during 2012. More details in the
+    <p id="info">Top GitHub repositories, colored by programming language and
+    linked by collaborative activity during 2012. Scroll to zoom, drag to pan,
+    click to open, hover to see neighbors, or search by name.<br>
+    More details in the
     <a href="https://github.com/coyotebush/github-network-analysis/raw/master/github.pdf">report</a>&nbsp;[PDF].
     Code and data <a href="https://github.com/coyotebush/github-network-analysis">on GitHub</a>.</p>
     <input type="search" id="filter" placeholder="repository name" incremental>
