--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <body>
     <div id="graph"></div>
     <p id="info">Top GitHub repositories, colored by programming language and
-    linked by collaborative activity during 2012. Scroll to zoom, drag to pan,
-    click to open, hover to see neighbors, or search by name.<br>
+    linked by collaborative activity during 2012. Scroll to zoom, click to open.
     More details in the
     <a href="https://github.com/coyotebush/github-network-analysis/raw/master/github.pdf">report</a>&nbsp;[PDF].
     Code and data <a href="https://github.com/coyotebush/github-network-analysis">on GitHub</a>.</p>
